grammar.js
    document: $ => repeat($._node),

    // ==========================================================================
    // Node types
    // ==========================================================================

    _node: $ => choice(
      $._html_node,
      $._django_node,
    ),

    doctype: $ => seq(
      '<!',
      alias($._doctype, 'doctype'),
      /[^>]+/,
      '>',
    ),

    _doctype: _ => /[Dd][Oo][Cc][Tt][Yy][Pp][Ee]/,

    // ==========================================================================
    // HTML: Elements
    // ==========================================================================

    void_element: $ => seq(
      '<',
      alias($._void_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    normal_element: $ => seq(
      '<',
      alias($._html_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
      repeat($._node),
      choice($.end_tag, $._implicit_end_tag),
    ),

    // For unbalanced HTML tags inside Django conditionals
    _start_tag_only: $ => seq(
      '<',
      alias($._html_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    script_element: $ => seq(
      alias($.script_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    _raw_text_with_django: $ => repeat1(choice(
      $.raw_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    style_element: $ => seq(
      alias($.style_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    rcdata_element: $ => choice(
      seq(
        alias($.title_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
      seq(
        alias($.textarea_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
    ),

    _rcdata_with_django: $ => repeat1(choice(
      $.rcdata_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    foreign_element: $ => seq(
      '<',
      alias($._foreign_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice(
        seq('>', repeat($._node), choice($.end_tag, $._implicit_end_tag)),
        '/>',
      ),
    ),

    // ==========================================================================
    // HTML: Start/End Tags
    // ==========================================================================

    start_tag: $ => seq(
      '<',
      alias(
        choice(
          $._html_start_tag_name,
          $._void_start_tag_name,
          $._foreign_start_tag_name,
          $._script_start_tag_name,
          $._style_start_tag_name,
          $._title_start_tag_name,
          $._textarea_start_tag_name,
          $._plaintext_start_tag_name,
        ),
        $.tag_name,
      ),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    end_tag: $ => seq(
      '</',
      alias($._end_tag_name, $.tag_name),
      '>',
    ),

    _attribute_node: $ => choice(
      $.attribute,
      $.django_interpolation,
      $.django_statement,
      $.django_line_comment,
    ),

    attribute: $ => seq(
      $.attribute_name,
      optional(seq(
        '=',
        choice(
          $.attribute_value,
          $.quoted_attribute_value,
        ),
      )),
    ),

    attribute_name: _ => /[^<>"'/=\s\{%]+/,

    attribute_value: $ => prec.left(repeat1(choice(
      $.entity,
      /[^<>"'=\s\{%]+/,
      $.django_interpolation,
    ))),

    quoted_attribute_value: $ => choice(
      seq(
        "'",
        repeat(choice(
          $.entity,
          alias(/[^'&\{]+/, $.attribute_value),
          // { not starting Django: optionally followed by non-Django, non-quote char and more text
          // The optional group allows lone { at end of attribute (before closing quote)
          alias(token(prec(-1, /\{([^{%#'][^'&\{]*)?/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        "'",
      ),
      seq(
        '"',
        repeat(choice(
          $.entity,
          alias(/[^"&\{]+/, $.attribute_value),
          // { not starting Django: optionally followed by non-Django, non-quote char and more text
          // The optional group allows lone { at end of attribute (before closing quote)
          alias(token(prec(-1, /\{([^{%#"][^"&\{]*)?/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        '"',
      ),
    ),

    // ==========================================================================
    // HTML: Text and Entities
    // ==========================================================================

    text: $ => prec.right(repeat1(choice(
      $.entity,
      // Single brace that's not start of Django (lookahead simulation)
      token(prec(-1, /\{/)),
      // Greater-than sign can appear in text (after comments, etc.)
      token(prec(-1, />/)),
      // Regular text excluding HTML special chars and braces
      token(/[^<>&\s\{][^<>&\{]*/),
    ))),

    // ==========================================================================
    // Django: Interpolation ({{ expression }})
    // ==========================================================================

    django_interpolation: $ => seq(
      '{{',
      optional($._django_inner_ws),
      optional($.filter_expression),
      optional($._django_inner_ws),
      '}}',
    ),

    // ==========================================================================
    // Django: Comments
    // ==========================================================================

    django_line_comment: _ => token(seq(
      '{#',
      /[^#]*#*([^#}][^#]*#*)*/,
      '#}',
    )),

    django_block_comment: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'comment',
      optional(seq($._django_inner_ws, alias(/[^%]+/, $.comment_text))),
      optional($._django_inner_ws),
      $._django_tag_close,
      optional(alias($._django_comment_content, $.comment_content)),
      $._django_tag_open,
      optional($._django_inner_ws),
      'endcomment',
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: Statements
    // ==========================================================================

    django_if_block: $ => seq(
      $.django_if_open,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
      repeat($.django_elif_branch),
      optional($.django_else_branch),
      $.django_endif,
    ),

    django_if_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'if',
      $._django_inner_ws,
      $.test_expression,
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_else_branch: $ => seq(
      $.django_else,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
    ),

    django_else: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'else',
      $._django_tag_close,
    ),

    django_endif: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endif',
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: For Block
    // ==========================================================================

    django_for_block: $ => seq(
      $.django_for_open,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
      optional($.django_empty_branch),
      $.django_endfor,
    ),

    django_for_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'for',
      $._django_inner_ws,
      $.loop_variables,
      $._django_inner_ws,
      'in',
      $._django_inner_ws,
      $.filter_expression,
      optional(seq($._django_inner_ws, alias('reversed', $.reversed))),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_empty_branch: $ => seq(
      $.django_empty,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
    ),

    django_empty: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'empty',
      $._django_tag_close,
    ),

    django_endfor: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endfor',
      $._django_tag_close,
    ),

    loop_variables: $ => prec.left(seq(
      alias($.identifier, $.variable_name),
      repeat(seq(optional($._django_inner_ws), ',', optional($._django_inner_ws), alias($.identifier, $.variable_name))),
    )),

    // ==========================================================================
    // Django: With Block
    // ==========================================================================

    django_with_block: $ => seq(
      $.django_with_open,
      repeat($._node),
      $.django_endwith,
    ),

    django_with_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'with',
      $._django_inner_ws,
      choice(
        $.with_assignments,
        $.with_legacy,
      ),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    with_assignments: $ => repeat1($._spaced_assignment),

    // Assignment with optional leading whitespace - the whitespace is consumed
    // as part of this rule rather than relying on extras
    _spaced_assignment: $ => seq(
      optional($._django_inner_ws),
      $.assignment,
    ),

    django_endwith: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endwith',
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: Block Block (template inheritance)
    // ==========================================================================

    django_block_block: $ => seq(
      $.django_block_open,
      repeat($._node),
      $.django_endblock,
    ),

    django_block_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'block',
      $._django_inner_ws,
      alias($.identifier, $.block_name),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_endblock: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endblock',
      optional(seq($._django_inner_ws, alias($.identifier, $.block_name))),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: Extends, Include, Load
    // ==========================================================================

    django_extends_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'extends',
      $._django_inner_ws,
      $.filter_expression,
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_include_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'include',
      $._django_inner_ws,
      $.filter_expression,
      optional(choice(
        // with ... only
        seq(
          $._django_inner_ws,
          'with',
          repeat1($._spaced_assignment),
          optional(seq(optional($._django_inner_ws), alias('only', $.only))),
        ),
        // only with ... (alternative order)
        seq(
          $._django_inner_ws,
          alias('only', $.only),
          $._django_inner_ws,
          'with',
          repeat1($._spaced_assignment),
        ),
        // only (standalone)
        seq($._django_inner_ws, alias('only', $.only)),
      )),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_url_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'url',
      $._django_inner_ws,
      $.filter_expression,
      repeat(seq(
        $._django_inner_ws,
        choice($.named_argument, $.filter_expression),
      )),
      optional(seq($._django_inner_ws, 'as', $._django_inner_ws, alias($.identifier, $.variable_name))),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_csrf_token_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'csrf_token',
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: Autoescape Block
    // ==========================================================================

    django_verbatim_block: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'verbatim',
      $._verbatim_start,  // External: captures suffix, consumes up to and including %}
      optional($._verbatim_block_content),  // External: scans until matching endverbatim
    ),

    // ==========================================================================
    // Django: Cycle Tag
    // ==========================================================================

    django_cycle_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'cycle',
      $._django_inner_ws,
      choice(
        alias($.identifier, $.cycle_name),
        seq(
          $.cycle_value,
          repeat(seq($._django_inner_ws, $.cycle_value)),
          optional(seq($._django_inner_ws, 'as', $._django_inner_ws, alias($.identifier, $.variable_name), optional(seq($._django_inner_ws, alias('silent', $.silent))))),
        ),
      ),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    cycle_value: $ => choice($.string, $.filter_expression),

    // ==========================================================================
    // Django: Firstof Tag
    // ==========================================================================

    django_generic_tag: $ => prec(-1, seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      $._validate_generic_simple,
      alias($.identifier, $.generic_tag_name),
      repeat(seq($._django_inner_ws, $.tag_argument)),
      optional($._django_inner_ws),
      $._django_tag_close,
    )),

    tag_argument: $ => choice(
      $.assignment,
      $.as_alias,
      $.filter_expression,
    ),

    filter_expression: $ => seq(
      $.primary_expression,
      repeat(seq(alias($._filter_pipe, '|'), $.filter_call)),
    ),

    _filter_pipe: _ => token(prec(1, /[ \t\r\n]*\|/)),

    primary_expression: $ => choice(
      $.literal,
      $.lookup,
    ),

    lookup: $ => seq(
      $.identifier,
      repeat(seq('.', choice($.identifier, $.numeric_index))),
    ),

    filter_call: $ => prec.left(seq(
      alias($.identifier, $.filter_name),
      optional(seq(
        alias($._filter_colon, ':'),
        $.filter_argument,
      )),
    )),

    filter_argument: $ => choice(
      $.literal,
      $.lookup,
    ),

    assignment: $ => seq(
      alias($.identifier, $.variable_name),
      '=',
      $.filter_expression,
    ),

    // ==========================================================================
    // Django: Test Expressions (for {% if %})
    // ==========================================================================

    test_expression: $ => $.or_expression,

    or_expression: $ => prec.left(1, seq(
      $.and_expression,
      repeat(seq($.or_keyword, $.and_expression)),
    )),

    and_expression: $ => prec.left(2, seq(
      $.not_expression,
      repeat(seq($.and_keyword, $.not_expression)),
    )),
